--- a/style.css
+++ b/style.css
@@ -3,6 +3,24 @@
     padding: 0;
 }
 
+html {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+@media (max-width: 750px) {
+    html {
+        font-size: 70%;
+    }
+}
+
+@media (max-width: 300px) {
+    html {
+        font-size: 60%;
+    }
+}
+
+
 .first-page {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/paul-green-4BmPrbvvj74-unsplash.jpg");
     background-position: center;
@@ -22,23 +40,25 @@
     background: rgb(33, 157, 179);
     position: fixed;
     border-bottom: 1px solid black;
+    
 }
 
-@media (max-width: 300px) {
-    .nav-bar {
-        flex-basis: 100%;
-    }
-}
+
 
 ul {
     display: flex;
     justify-content: flex-end;
     list-style: none;
     padding-top: 10px;
-    padding-right: 50px;
-    
-    
+    padding-right: 50px;  
 }
+
+@media (max-width: 300px) {
+    ul {
+        justify-content: center;
+    }
+}
+
 
 li {
     padding-left: 50px;
@@ -129,6 +149,12 @@ ul li a:hover {
     padding-bottom: 10px;
 }
 
+@media (max-width: 300px) {
+    .recent-works h2 {
+        font-size: 40px;
+    }
+}
+
 /* Project grid area */
 
 .project-grid {
@@ -139,6 +165,12 @@ ul li a:hover {
     max-width: 1280px;
     margin: 0 auto;
     margin-bottom: 60px;
+}
+
+@media (max-width: 300px) {
+    .project-grid {
+        padding: 60px 10px;
+    }
 }
 
 .project-grid a {
@@ -234,6 +266,14 @@ ul li a:hover {
     margin: 0 auto;
 }
 
+@media (max-width: 300px) {
+    .about img {
+        width: 300px;
+        height: 300px;
+
+    }
+}
+
 .text-field {
     margin: 0 auto;
     border: 2px solid black;
@@ -293,6 +333,13 @@ footer {
 footer p {
     color: white;
     margin: 20px;
+    
+}
+
+@media (max-width: 300px) {
+    footer p {
+        font-size: 10px;
+    }
 }
 
 .footer-side {
