--- a/style.css
+++ b/style.css
@@ -268,8 +268,9 @@ ul li a:hover {
 
 @media (max-width: 300px) {
     .about img {
-        width: 300px;
-        height: 300px;
+        width: 200px;
+        height: 200px;
+        margin: 0 auto;
 
     }
 }
