--- a/style.css
+++ b/style.css
@@ -88,8 +88,12 @@ ul li a:hover {
     display: flex;
     flex-direction: column;
     padding-top: 250px;
+}
 
-    
+@media (max-width: 300px) {
+    .headline {
+        padding-top: 100px;
+    }
 }
 
 .headline h1 {
@@ -268,10 +272,9 @@ ul li a:hover {
 
 @media (max-width: 300px) {
     .about img {
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
         margin: 0 auto;
-
     }
 }
 
