--- a/style.css
+++ b/style.css
@@ -92,7 +92,9 @@ ul li a:hover {
 
 @media (max-width: 350px) {
     .headline {
-        padding-top: 100px;
+        padding-top: 150px !important;
+        display: flex;
+        flex-direction: column;
     }
 }
 
