--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 }
 
 
+
 .first-page {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/paul-green-4BmPrbvvj74-unsplash.jpg");
     background-position: center;
@@ -31,10 +32,18 @@ html {
     border-bottom: 5px solid gray;
 }
 
+.logo {
+    display: block;
+    width: 70px;
+    height: 50px;
+    align-items: flex-start;
+    margin-left: 50px;   
+}
 
 .nav-bar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     min-width: 100%;
     height: 70px;
     background: rgb(33, 157, 179);
@@ -43,46 +52,68 @@ html {
     
 }
 
-
-
-ul {
-    display: flex;
-    justify-content: flex-end;
-    list-style: none;
-    padding-top: 10px;
-    padding-right: 50px;  
+nav .fas {
+    display: none;
 }
 
-@media (max-width: 300px) {
-    ul {
-        justify-content: center;
+@media (max-width: 700px) {
+    ul li {
+        display: block;
+    }
+    .nav-links {
+        position: absolute;
+        background: grey;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav .fas {
+        display: block;
+        color: white;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-links ul {
+        padding: 30px;
     }
 }
 
 
-li {
-    padding-left: 50px;
-    
+
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 25px;
+    position: relative;
 }
 
-.nav-link {
-    text-decoration: none;
-}
-
-ul li a {
+.nav-links ul li a {
     font-size: larger;
     font-weight: 600;
     text-align: center;
     color: white;
+    text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
 
 ul li a:hover {
     font-size: larger;
     font-weight: 600;
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-bottom: 2px solid white;
+    
 }
+
+
 
 .headline {
     display: flex;
@@ -90,9 +121,9 @@ ul li a:hover {
     padding-top: 200px;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 700px) {
     .headline {
-        padding-top: 100px !important;
+        padding-top: 150px !important;
         display: flex;
         flex-direction: column;
     }
@@ -272,7 +303,7 @@ ul li a:hover {
     margin: 0 auto;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 700px) {
     .about img {
         width: 200px;
         height: 200px;
@@ -305,6 +336,13 @@ ul li a:hover {
     height: 50vh;
     padding: 0 20px;
     background: rgb(41, 40, 40);
+}
+
+.contact-header img {
+    display: block;
+    width: 200px;
+    height: 100px;
+    margin: 0 auto;
 }
 
 .social-links {
