--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html {
     width: 70px;
     height: 50px;
     align-items: flex-start;
-    margin-left: 50px;   
+    margin-left: 20px;   
 }
 
 .nav-bar {
@@ -75,6 +75,7 @@ nav .fas {
         display: block;
         color: white;
         margin: 10px;
+        margin-right: 20px;
         font-size: 22px;
         cursor: pointer;
     }
@@ -84,7 +85,9 @@ nav .fas {
 }
 
 
-
+.nav-links ul {
+    margin-right: 10px;
+}
 
 .nav-links ul li {
     list-style: none;
@@ -110,7 +113,6 @@ ul li a:hover {
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-bottom: 2px solid white;
-    
 }
 
 
