--- a/style.css
+++ b/style.css
@@ -75,12 +75,16 @@ nav .fas {
         display: block;
         color: white;
         margin: 10px;
-        margin-right: 20px;
+        margin-right: 10px;
         font-size: 22px;
         cursor: pointer;
     }
     .nav-links ul {
         padding: 30px;
+    }
+    .logo {
+        display: block;
+        margin-left: 10px;   
     }
 }
 
